# swarm

./: .gitignore  pyproject.toml
examples/math_swarm/: agents.py  bench_marking.py  bench_marking_config.yaml.example  result_checker.py  run.py  side_utils.py
examples/triage_agent/: agents.py  run.py  run_config.yaml
swarm/: core.py  pyproject.toml  types.py  util.py
swarm/repl/: repl.py
